fix : fix layout bug & adapt mobile browser ;

--- a/css/style.css
+++ b/css/style.css
@@ -16,16 +16,16 @@ body {
 
 .htmleaf-header{
 	width: 100%;
-    height: 100px;
-    background-image: url(../img/nav-bg3.jpg);
+    height: 120px;
+    /*background-image: url(../img/nav-bg3.jpg);*/
     background-position-x: center;  
     background-color: #0d1225;
     color: white;
 }
 .htmleaf-header .big-title{
 	display: inline-block;
-    line-height: 100px;
-    font-size: 2.5em;
+    line-height: 120px;
+    font-size: 3em;
     padding-left: .5em;
 	font-weight: bold;
     text-shadow: 3px 3px 2px blue;
@@ -143,7 +143,13 @@ nav ul li a:hover {
     display: inline-block;
     background-size: cover;
 }
-
+.icon-like{
+    background-image: url(../img/icon-like.png);
+    height: 14px;
+    width: 16px;
+    display: inline-block;
+    background-size: cover;
+}
 #main{
     width: 100%;
     height: auto;
@@ -167,6 +173,7 @@ nav ul li a:hover {
     padding-left:30px;
 }
 #info-card{
+    margin-top: 20px;
     background: white;
     min-height: 300px;
     width:100%;
@@ -226,6 +233,9 @@ nav ul li a:hover {
     width: 100%;
     text-align: left;
 }
+h3.blog-title a{
+    text-decoration: none;
+}
 .item-separator{
     width: 100%;
     height: 1px;
@@ -258,7 +268,11 @@ nav ul li a:hover {
 .bottom-right{
     float: right;
 }
-.blog-read-count span{
+.bottom-right span{
+    margin-left:3px;
+}
+.blog-like,.blog-read-count{
+    display : inline-block;
     margin:0 5px;
 }
 
@@ -268,6 +282,11 @@ nav ul li a:hover {
 	.htmleaf-header{
 		display:none;
 	}
+    .htmleaf-container{   /*移动端header不上移*/
+        z-index: 1;
+        position:fixed;
+        width: 100%;
+    }
     #menu_button_wrapper{
         display: block;
         padding: 1em;
@@ -328,7 +347,7 @@ nav ul li a:hover {
     }
 
     #main{
-        padding: 2px;
+        padding: 76px 2px 2px 2px;
     }
     #main .container{
         padding-right: 5px;
@@ -342,5 +361,8 @@ nav ul li a:hover {
 @media (max-width: 992px) {
     #left-side-content{
         display: none;
+    }
+    #all-blog-list-content{
+        width:100%;
     }
 }
